[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sublimekeys"
version = "0.3.0"
description = "Official Python SDK for SublimeKeys — license activation and verification with offline-capable signed leases"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Sublimearts.io" }]
keywords = ["license", "licensing", "software-licensing", "activation", "desktop-app"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["cryptography>=41.0.0,<50"]

[project.urls]
Homepage = "https://keys.sublimearts.io"
Documentation = "https://keys.sublimearts.io/docs"
Repository = "https://github.com/Volume00/sublimekeys-python"

[project.scripts]
sublimekeys = "sublimekeys.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
